// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCard should hide the balance if the profile uses a password 1`] = `
<DocumentFragment>
  <div
    data-testid="ProfileCard"
  >
    <div
      class="sc-AxiKw deMsQD"
      data-testid="Card"
    >
      <div
        class="relative p-2 sm:flex sm:items-center"
      >
        <div
          class="flex flex-row justify-between w-full"
        >
          <div
            class="flex items-center"
          >
            <div
              class="rounded-full bg-theme-neutral-contrast w-11 h-11"
              data-testid="profile-card__user--avatarImage"
            >
              <img
                alt="John Doe"
                class="object-cover bg-center bg-no-repeat bg-cover rounded-full w-11 h-11"
                src="avatarImage"
                title="John Doe"
              />
            </div>
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Name
              </p>
              <p
                class="font-semibold text-theme-text"
                data-testid="profile-card__user--name"
              >
                <span
                  class="sc-AxhCb lnNDXb"
                >
                  John Doe
                </span>
              </p>
            </div>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Total balance
              </p>
              <span
                class="font-semibold text-theme-neutral"
              >
                N/A
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileCard should hide the settings icon 1`] = `
<div>
  <div
    data-testid="ProfileCard"
  >
    <div
      class="sc-AxiKw deMsQD"
      data-testid="Card"
    >
      <div
        class="relative p-2 sm:flex sm:items-center"
      >
        <div
          class="flex flex-row justify-between w-full"
        >
          <div
            class="flex items-center"
          >
            <div
              class="rounded-full bg-theme-neutral-contrast w-11 h-11"
              data-testid="profile-card__user--avatarImage"
            >
              <img
                alt="John Doe"
                class="object-cover bg-center bg-no-repeat bg-cover rounded-full w-11 h-11"
                src="avatarImage"
                title="John Doe"
              />
            </div>
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Name
              </p>
              <p
                class="font-semibold text-theme-text"
                data-testid="profile-card__user--name"
              >
                <span
                  class="sc-AxhCb lnNDXb"
                >
                  John Doe
                </span>
              </p>
            </div>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Total balance
              </p>
              <span
                class="font-semibold text-theme-neutral"
              >
                N/A
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      />
    </div>
  </div>
</div>
`;

exports[`ProfileCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="ProfileCard"
  >
    <div
      class="sc-AxiKw deMsQD"
      data-testid="Card"
    >
      <div
        class="relative p-2 sm:flex sm:items-center"
      >
        <div
          class="flex flex-row justify-between w-full"
        >
          <div
            class="flex items-center"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
              data-testid="profile-card__user--avatar"
            >
              <img
                alt="John Doe"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="John Doe"
              />
              <span
                class="absolute text-sm font-semibold text-theme-background"
              >
                JO
              </span>
            </div>
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Name
              </p>
              <p
                class="font-semibold text-theme-text"
                data-testid="profile-card__user--name"
              >
                <span
                  class="sc-AxhCb lnNDXb"
                >
                  John Doe
                </span>
              </p>
            </div>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Total balance
              </p>
              <span
                class="font-semibold text-theme-text"
                data-testid="profile-card__user--balance"
              >
                0 BTC
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileCard should render the profile with avatar image 1`] = `
<DocumentFragment>
  <div
    data-testid="ProfileCard"
  >
    <div
      class="sc-AxiKw deMsQD"
      data-testid="Card"
    >
      <div
        class="relative p-2 sm:flex sm:items-center"
      >
        <div
          class="flex flex-row justify-between w-full"
        >
          <div
            class="flex items-center"
          >
            <div
              class="rounded-full bg-theme-neutral-contrast w-11 h-11"
              data-testid="profile-card__user--avatarImage"
            >
              <img
                alt="John Doe"
                class="object-cover bg-center bg-no-repeat bg-cover rounded-full w-11 h-11"
                src="avatarImage"
                title="John Doe"
              />
            </div>
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Name
              </p>
              <p
                class="font-semibold text-theme-text"
                data-testid="profile-card__user--name"
              >
                <span
                  class="sc-AxhCb lnNDXb"
                >
                  John Doe
                </span>
              </p>
            </div>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Total balance
              </p>
              <span
                class="font-semibold text-theme-text"
                data-testid="profile-card__user--balance"
              >
                0 BTC
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileCard should render the settings icon 1`] = `
<div>
  <div
    data-testid="ProfileCard"
  >
    <div
      class="sc-AxiKw deMsQD"
      data-testid="Card"
    >
      <div
        class="relative p-2 sm:flex sm:items-center"
      >
        <div
          class="flex flex-row justify-between w-full"
        >
          <div
            class="flex items-center"
          >
            <div
              class="rounded-full bg-theme-neutral-contrast w-11 h-11"
              data-testid="profile-card__user--avatarImage"
            >
              <img
                alt="John Doe"
                class="object-cover bg-center bg-no-repeat bg-cover rounded-full w-11 h-11"
                src="avatarImage"
                title="John Doe"
              />
            </div>
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Name
              </p>
              <p
                class="font-semibold text-theme-text"
                data-testid="profile-card__user--name"
              >
                <span
                  class="sc-AxhCb lnNDXb"
                >
                  John Doe
                </span>
              </p>
            </div>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
            >
              <p
                class="text-sm font-semibold text-theme-neutral"
              >
                Total balance
              </p>
              <span
                class="font-semibold text-theme-neutral"
              >
                N/A
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      >
        <div
          class="relative"
          data-testid="dropdown__toggle"
        >
          <div
            class="sc-AxjAm khqMzO p-2 cursor-pointer text-theme-neutral-400 hover:text-theme-neutral-500"
            height="20"
            width="4"
          >
            <svg>
              settings.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
